gitignore, readme update on how to install flask, data update

--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,2 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Virtual environment
-venv/
-.env/
-ENV/
-env/
-.venv/
-
-# Flask instance folder
-instance/
-
-# Flask cache and logs
-*.log
-
-# Pytest cache
-.pytest_cache/
-
-# VS Code settings
-.vscode/
-
-# OS files
-.DS_Store
-
-# Coverage reports
-htmlcov/
-.coverage
-coverage.xml
-
-# Mypy
-.mypy_cache/
-
-# Pipenv
-Pipfile.lock
-
-# SQLite database
-*.sqlite3
-*.db
-
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints/
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
